devops/kubernetes/myapp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: myapp-ingress
spec:
    rules:
    - host: myapp.com
    http:
        paths:
        - backend:
            serviceName: myapp-internal-servcie
            servicePort: 8080
